fix: alignment fix for nested table

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -307,7 +307,7 @@ img {
   }
 }
 
-input[type="text"]:focus-visible{
+input[type="text"]:focus-visible {
   border: none !important;
   outline: none !important;
 }
@@ -948,10 +948,11 @@ body .jconfirm-box-container .jconfirm-box {
     }
   }
 }
+
 .dataTables_filter {
   @extend .d-none;
 }
 
-span.doc-name {
+td>span.doc-name {
   @extend .p-3;
 }
